# cloud-ready-timeseries-pipeline

./: .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml
db/: init.sql
src/: __init__.py  config.py  db.py  main.py  pipeline.py
tests/: test_db.py  test_pipeline.py
